⚡OperatorHelper 처리 성능 개선